rpi5/archestra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: archestra
  labels:
    app: archestra
spec:
  replicas: 1
  selector:
    matchLabels:
      app: archestra
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      name: archestra
      labels:
        app: archestra
    spec:
      containers:
        - name: archestra
          image: archestra/platform:1.1.36@sha256:612cff4cf16113febfd6c357230e66379584169f2792ab092d2105d158ea46f2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
              name: frontend
            - containerPort: 9000
              protocol: TCP
              name: backend
            - containerPort: 9050
              protocol: TCP
              name: metrics
          resources:
            requests:
              memory: 1Gi
            limits:
              memory: 3Gi
          startupProbe:
            failureThreshold: 30
            httpGet:
              path: /health
              port: backend
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: backend
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /ready
              port: backend
            periodSeconds: 10
            timeoutSeconds: 5
      restartPolicy: Always
      nodeSelector:
        kubernetes.io/arch: amd64
      serviceAccountName: archestra
